tests/rosetta/out/Rust/abbreviations-automatic.error
rustc: exit status 1
error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> /tmp/abbreviations-automatic.rs:70:27
   |
70 |         if s.len() as i32 < 2 {
   |                           ^ --- interpreted as generic arguments
   |                           |
   |                           not interpreted as comparison
   |
help: try comparing the cast value
   |
70 |         if (s.len() as i32) < 2 {
   |            +              +

warning: denote infinite loops with `loop { ... }`
  --> /tmp/abbreviations-automatic.rs:54:9
   |
54 |         while true {
   |         ^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

error[E0308]: mismatched types
 --> /tmp/abbreviations-automatic.rs:8:41
  |
8 |             let ch = &s[i as usize..i + 1 as usize];
  |                                         ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
 --> /tmp/abbreviations-automatic.rs:8:37
  |
8 |             let ch = &s[i as usize..i + 1 as usize];
  |                                     ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
 --> /tmp/abbreviations-automatic.rs:8:39
  |
8 |             let ch = &s[i as usize..i + 1 as usize];
  |                                       ^ no implementation for `i32 + usize`
  |
  = help: the trait `Add<usize>` is not implemented for `i32`
  = help: the following other types implement trait `Add<Rhs>`:
            `&i32` implements `Add<i32>`
            `&i32` implements `Add`
            `i32` implements `Add<&i32>`
            `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/abbreviations-automatic.rs:12:69
   |
12 |                     words = { let mut tmp = words.clone(); tmp.push(cur); tmp };
   |                                                                ---- ^^^ expected `&str`, found `String`
   |                                                                |
   |                                                                arguments to this method are incorrect
   |
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/vec/mod.rs:2442:12
help: consider borrowing here
   |
12 |                     words = { let mut tmp = words.clone(); tmp.push(&cur); tmp };
   |                                                                     +

error[E0308]: mismatched types
  --> /tmp/abbreviations-automatic.rs:13:27
   |
5  |         let mut cur = String::new();
   |                       ------------- expected due to this value
...
13 |                     cur = "";
   |                           ^^- help: try using a conversion method: `.to_string()`
   |                           |
   |                           expected `String`, found `&str`

error[E0308]: mismatched types
  --> /tmp/abbreviations-automatic.rs:21:61
   |
21 |             words = { let mut tmp = words.clone(); tmp.push(cur); tmp };
   |                                                        ---- ^^^ expected `&str`, found `String`
   |                                                        |
   |                                                        arguments to this method are incorrect
   |
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/vec/mod.rs:2442:12
help: consider borrowing here
   |
21 |             words = { let mut tmp = words.clone(); tmp.push(&cur); tmp };
   |                                                             +

error[E0308]: mismatched types
  --> /tmp/abbreviations-automatic.rs:38:117
   |
38 |         let mut m: std::collections::HashMap<&'static str, bool> = { let mut m = std::collections::BTreeMap::new(); m };
   |                                                                                                                     ^ expected `HashMap<&str, bool>`, found `BTreeMap<_, _>`
   |
   = note: expected struct `HashMap<&'static str, bool>`
              found struct `BTreeMap<_, _>`

error[E0308]: mismatched types
  --> /tmp/abbreviations-automatic.rs:71:20
   |
68 |     fn pad2(n: i32) -> &'static str {
   |                        ------------ expected `&str` because of return type
...
71 |             return format!("{}{}", " ", s);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> /tmp/abbreviations-automatic.rs:73:16
   |
68 |     fn pad2(n: i32) -> &'static str {
   |                        ------------ expected `&'static str` because of return type
...
73 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
73 |         return &s;
   |                +

error: aborting due to 10 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
